[ticket/12155] Get rid of line-height value causing alignment issues in FF.
PHPBB3-12155

--- a/phpBB/styles/prosilver/theme/buttons.css
+++ b/phpBB/styles/prosilver/theme/buttons.css
@@ -7,7 +7,6 @@
 .button {
 	cursor: pointer;
 	display: inline-block;
-	line-height: 17.5px;
 	height: 18px;
 	font-size: 13px;
 	white-space: nowrap;
